style: Update index.html

--- a/40666960/index.html
+++ b/40666960/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="hero">
-            <h1 class="header">watafak</h1>
+            <h1 class="header">that was a mistake(</h1>
         </div>
         <div class="gallery" id="cardContainer"></div>
     </section>
